--- a/index.html
+++ b/index.html
@@ -2,35 +2,71 @@
 <html lang="zh-cn">
 <head>
     <meta charset="UTF-8">
-    <title>易文星 | Philo </title>
+    <title>易文星 | 技术与学术主页</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>易文星的个人主页</h1>
-    </header>
-    <main>
-        <section id="profile">
-            <h2>About Me</h2>
-            <p>数据分析与生态研究方向。欢迎访问我的个人主页和最新读书笔记、技术分享。</p>
-            <p>英文简历下载：<a href="cv/Philo_Wenzhou_CV.pdf" target="_blank">Download My English CV (PDF)</a></p>
-        </section>
-        <section id="notes">
-            <h2>最新读书笔记</h2>
+<div class="wrapper">
+    <aside class="sidebar">
+        <img src="images/avatar.jpg" alt="易文星头像" class="avatar">
+        <h1>易文星</h1>
+        <div class="status">
+            <span>职业状态：</span><br>
+            <strong>物联网工程师</strong><br>
+            <strong>气象算法预测模型开发助理</strong>
+        </div>
+        <div class="info">
+            <p><b>Email:</b> <a href="mailto:philoyiwenxing@163.com">philoyiwenxing@163.com</a></p>
+            <p><b>居住地:</b> 四川成都</p>
+            <p><b>英文简历:</b> <a href="cv/Philo_Wenzhou_CV.pdf" target="_blank">Download CV (PDF)</a></p>
+        </div>
+        <div class="update">
+            <strong>最近状态</strong>
             <ul>
-                <li><a href="notes/2025-09-05_book_note.html">生态学原理笔记</a></li>
-                <li><a href="notes/2025-08-30_book_note.html">统计学习方法笔记</a></li>
+                <li>参与森林火险预测模型开发</li>
+                <li>土壤健康大数据分析上线</li>
+                <li>最新读书笔记持续更新</li>
             </ul>
-            <p><a href="notes/index.html">更多笔记&gt;&gt;</a></p>
+        </div>
+    </aside>
+    <main class="main">
+        <section id="stat-notes">
+            <h2>师统计相关工作笔记</h2>
+            <article>
+                <h3>医学项目数据分析与生信建模</h3>
+                <p>
+                    近期参与肝脏弹性驱动因素分析，结合 GEO/TCGA 数据库、医院临床数据，实现关键基因筛选和预测模型训练。主要任务包括数据清洗、特征提取、统计分析及机器学习建模。模型预测准确率已达到临床可用水平，相关论文已发表并在投。
+                </p>
+                <ul>
+                    <li>生信流程开发：差异分析、富集分析、PPI网络构建</li>
+                    <li>临床数据建模：Cox分析、生存分析、多元回归</li>
+                    <li>机器学习提升模型性能，AUC提升至0.9+（测试集大于0.8）</li>
+                    <li>纵向数据时间序列建模，MCMC方法提升分析效果</li>
+                    <li>协助医学课题结题，支持博士生论文及成果产出</li>
+                </ul>
+            </article>
         </section>
-        <section id="contact">
-            <h2>联系方式</h2>
-            <p>Email: <a href="mailto:philoyiwenxing@163.com">philoyiwenxing@163.com</a></p>
+        <section id="weather-notes">
+            <h2>气象模型开发相关工作笔记</h2>
+            <article>
+                <h3>森林火险预测与卫星遥感数据应用</h3>
+                <p>
+                    参与配电线火灾风险模型、卫星云量/火点算法开发，基于 FY4B、葵花8 等卫星数据及气象观测，集成多源数据进行火险预测。结合机器学习模型，对草原、森林火灾蔓延进行动态模拟与预警。
+                </p>
+                <ul>
+                    <li>开发火灾蔓延、资产风险、多因子预报模型</li>
+                    <li>卫星数据批量处理与云量、积雪、火点识别算法优化</li>
+                    <li>气象数据融合 DEM、风场模型，提升区域风险判断</li>
+                    <li>完成四川、重庆火险报告及模型部署</li>
+                    <li>参与国际合作湿地碳损失建模，论文投递 Nature</li>
+                </ul>
+            </article>
         </section>
     </main>
-    <footer>
-        <p>&copy; 2025 易文星</p>
-    </footer>
+</div>
+<footer>
+    <p>&copy; 2025 易文星 | 技术与学术主页</p>
+</footer>
 </body>
 </html>
