feat(ui): 优化页面布局并增强交互效果
- 增加页面宽度和间距提升可读性
- 添加悬停动画和阴影效果增强交互体验
- 简化标题文本使其更简洁
- 优化响应式设计移除冗余代码

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>程序员Ben | 技术学习主页</title>
-  <meta name="description" content="Ben：9个月狸花猫程序员，主攻Java/Python/R，技术学习中！" />
-  <meta property="og:title" content="程序员Ben | 狸花猫的技术学习主页" />
-  <meta property="og:description" content="狸花猫程序员 × Java/Python/R × 技术学习" />
+  <title>Ben | 技术学习主页</title>
+  <meta name="description" content="Ben：9个月狸花猫，主攻Java/Python/R，技术学习中！" />
+  <meta property="og:title" content="Ben 技术学习主页" />
+  <meta property="og:description" content="狸花猫 × Java/Python/R × 技术学习" />
   <meta property="og:type" content="website" />
   <meta property="og:locale" content="zh_CN" />
   <meta name="theme-color" content="#8b4513">
@@ -33,17 +33,17 @@
 
   <div class="wrapper">
     <div class="grid">
-      <!-- 侧边栏（狸花猫程序员Ben信息） -->
-      <aside class="sidebar" aria-label="狸花猫程序员Ben的信息">
-        <!-- 狸花猫程序员Ben的头像（键盘和代码的忠实伙伴） -->
-        <img src="images/ben-coder-cat.svg" alt="狸花猫程序员Ben的头像" class="avatar" />
+      <!-- 侧边栏（狸花猫Ben信息） -->
+      <aside class="sidebar" aria-label="狸花猫Ben的信息">
+        <!-- 狸花猫Ben的头像（键盘和代码的忠实伙伴） -->
+        <img src="images/ben-coder-cat.svg" alt="狸花猫Ben的头像" class="avatar" />
         <div class="name">
           <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
             <rect x="2" y="3" width="20" height="14" rx="2" ry="2"/>
             <line x1="8" y1="21" x2="16" y2="21"/>
             <line x1="12" y1="17" x2="12" y2="21"/>
           </svg>
-          程序员Ben
+          Ben
         </div>
         <div class="tagline">年龄10个月| 主攻Java/Python/R 以及自由搏击| 技术学习中</div>
 
@@ -246,7 +246,7 @@
     </div>
 
     <footer>
-      © 2025 程序员Ben · 狸花猫的技术学习主页 | 今日学习进度：<span class="code">Java基础 ✅ | SpringBoot 🔄 | Python爬虫 ✅</span> 🐱💻
+      © 2025 Ben · 狸花猫Ben的技术学习主页 | 今日学习进度：<span class="code">Java基础 ✅ | SpringBoot 🔄 | Python爬虫 ✅</span> 🐱💻
     </footer>
   </div>
   
