feat: 添加交互式R代码演示页面
实现前端模拟的R代码运行环境，包含代码编辑、运行按钮和结果展示功能
支持文本输出和图表可视化，并添加加载动画和主题切换功能

--- a/index.html
+++ b/index.html
@@ -129,6 +129,13 @@
                   <div class="meta">掌握<span class="code">vector</span>、<span class="code">list</span>、<span class="code">data.frame</span>等基础数据结构 | 数据导入导出实战 | 附详细代码示例</div>
                 </div>
               </a>
+              <a class="item" href="notes/r-interactive-demo.html">
+                <span class="dot" aria-hidden="true"></span>
+                <div>
+                  <h3>R语言交互式示例：代码与实时运行结果</h3>
+                  <div class="meta">交互式R代码运行环境 | 数据可视化展示 | 统计分析案例 | 前端实现方案</div>
+                </div>
+              </a>
               <a class="item" href="notes/r-visualization.html">
                 <span class="dot" aria-hidden="true"></span>
                 <div>
