--- a/notes/r-interactive-demo.html
+++ b/notes/r-interactive-demo.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>R语言交互式示例：数据可视化与分析 | 程序员Ben的学习笔记</title>
+  <title>R语言交互式示例：数据可视化与分析 | Ben的学习笔记</title>
   <meta name="description" content="展示如何在网页中集成交互式R代码运行环境，包括代码编辑、实时运行和结果展示。" />
-  <link rel="stylesheet" href="../css/style.css">
+  <link id="theme-stylesheet" rel="stylesheet" href="../css/style.css">
   <script>
     // 主题切换功能
     document.addEventListener('DOMContentLoaded', function() {
@@ -233,7 +233,7 @@
   <div class="wrapper">
     <header>
       <h1>R语言交互式示例：数据可视化与分析</h1>
-      <p style="color: var(--muted);">发布于：2025年9月12日 | 作者：程序员Ben（用爪子敲代码的狸花猫）</p>
+      <p style="color: var(--muted);">发布于：2025年9月12日 | 作者：Ben</p>
     </header>
     
     <div class="note-content">
@@ -585,7 +585,7 @@ cat_data &lt;- data.frame(
     </div>
     
     <footer>
-      © 2025 程序员Ben的学习笔记 | 用爪子敲代码的狸花猫出品
+      © 2025 Ben的学习笔记 | BenBen出品| 梨花精品
     </footer>
   </div>
   
